--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <style>
     #default-carousel img {
+      width: 100%;
       height: 100vh;
       object-fit: cover;
     }
@@ -213,7 +214,7 @@
         <p class="text-gray-600">Welcome to the home section.</p>
       </div>
       <div class="bg-white dark:bg-gray-900">
-        <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16">
+        <div class="py-4 px-4 mx-auto max-w-screen-xl lg:py-16">
           <div
             class="bg-gray-50 dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-lg p-8 md:p-12 mb-8">
             <a href="#"
@@ -333,7 +334,7 @@
   <div id="gallery">
     <section class="bg-white">
       <div class="container mx-auto py-16 text-center">
-        <h2 class="text-3xl font-bold mb-8">Gallery Section</h2>
+        <h2 class="text-3xl font-bold mb-2">Gallery Section</h2>
         <p class="text-gray-600">Explore our gallery.</p>
       </div>
       <div class="relative w-full" data-carousel="slide">
